
[float]
===== Fixed

- Ensure that the log level is updated for the config's logger when value is changed {pull}755[#755]
- Set config `false` values to `false`, not `nil` {pull}761[#761]
- Ensure that the previously running agent's config is used in `ElasticAPM.restart` {pull}763[#763]
- Handle the Resque spy's payload class value being a String or Class and update docs {pull}768[#768]

[float]
===== Added

- Add enabled config option, replacing active {pull}669[#669]
- Add recording config option {pull}765[#765]
- Add support for `SuckerPunch` {pull}775[#775]

[[release-notes-3.6.0]]
==== 3.6.0 (2020-03-10)

[float]
===== Added

- Support for gRPC using the `grpc` gem (Experimental) {pull}669[#669]
- GraphQL support (experimental) {pull}721[#721]
- Add `span.context.destination.address` and `span.context.destination.port` when available. {pull}722[#722]
- Add support for Resque. {pull}729[#729]

[float]
===== Changed

- The new SQL parser is used by default {pull}730[#730]

[[release-notes-3.5.0]]
==== 3.5.0 (2020-02-12)

[float]
===== Added

- Pass along tracestate headers and add prefixless Traceparent header {pull}694[#694]
- Add sanitize_field_names to replace custom_key_filters {pull}708[#708]
- Add `rows_affected` to database related spans (Sequel only for now) {pull}668[#668]

[float]
===== Changed

- Rename disabled_instrumentations to disable_instrumentations {pull}695[#695]

[float]
===== Fixed

- Fix thread race condition in metrics collection (JRuby) {pull}669[#669]

[[release-notes-3.4.0]]
==== 3.4.0 (2020-01-10)

[float]
===== Added

- Add `span.context.destination` fields {pull}647[#647]
- Add more precise (experimental) SQL summarizer {pull}640[#640]
- Add support for Shoryuken (AWS SQS) {pull}674[#674]
- Add support for Sneakers (Experimental) {pull}676[#676]
- Add option `api_key` (experimental) to specify an Api key to use with the apm server {pull}655[#655]

[float]
===== Changed
